update pictures + links

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,42 +31,42 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work">
-            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+            <a href="https://oscarg1991.github.io/Giftastic/"> <img src="assets/images/Giftastic.png" alt="Giftastic"></a>
 
-            <h3>Word Guess</h3>
+            <a href="https://oscarg1991.github.io/Giftastic/"><h3>Giftastic</h3></a>
           </div>
         </div>
         <div class="col-md-4">
           <div class="work">
-            <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+            <a href="https://rmackall.github.io/Project1"><img src="assets/images/Project1.png" alt="Project 1"></a>
 
-            <h3>RPG Game</h3>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-            <h3>Trivia Game</h3>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-
-            <h3>Rutgers Info Widget</h3>
+            <a href="https://github.com/rmackall/Project1"><h3>Project 1</h3></a>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4">
           <div class="work">
-            <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+            <a href="https://oscarg1991.github.io/TrainSchedule"><img src="assets/images/TrainSchedule.png" alt="Train Schedule"></a>
 
-            <h3>Rock Paper Scissors</h3>
+            <a href="https://github.com/OscarG1991/TrainSchedule"><h3>Train Schedule</h3></a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work">
+            <a href="https://whispering-castle-93484.herokuapp.com/"><img src="assets/images/Project2.png" alt="Project 2"></a>
+
+
+            <a href="https://github.com/OscarG1991/Project2"><h3>Project 2</h3></a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="work">
+            <a href="https://fathomless-springs-50545.herokuapp.com/"><img src="assets/images/Friend_Finder.png" alt="Friend Finder"></a>
+
+            <a href="https://github.com/OscarG1991/FriendFinder"><h3>Friend Finder</h3></a>
           </div>
         </div>
       </div>
