--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <section class="main-section">
                     <h1>About Me</h1>
 
-                    <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+                    <img src="assets/images/Oscar.png" class="auth-image" alt="Your Name">
 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac
                         rhoncus
