--- a/index.html
+++ b/index.html
@@ -34,25 +34,17 @@
 
                     <img src="assets/images/Oscar.png" class="auth-image" alt="Your Name">
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac
-                        rhoncus
-                        nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu.
-                        Proin
-                        vel
-                        dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin
-                        commodo
-                        purus vitae sollicitudin consectetur.</p>
+                    <p>Currently working as a Network Engineer at Charter Communications (Spectrum).
+                        I'm mostly involved in customer support and troubleshooting network problems.
+                        I've developed strong sys admin skills and work with TACACS, both ACS and ISE.
+                        Have a strong knowledge of Linux and pursuing my CCNA. 
+                    </p>
 
-                    <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium
-                        odio.
-                        Nunc
-                        id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-                    <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas
-                        nibh
-                        tortor
-                        et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-
+                    <p>
+                        Currently attending DU Bootcamp because it was one of the few that offers part time. 
+                        Skills I've gained in the bootcamp are the following: 
+                        Github, HTML, CSS, Javascript, Node.js, MYSQL, Sequelize, MONGO
+                        
                 </section>
             </div>
         </div>
